# delphes-parallel

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE.txt  README.md
.github/workflows/: ci.yml  rust.yml
cmake/: FindHepMC2.cmake
src/: DelphesHepMC2Parallel.c++  lib.rs  main.rs
tests/: .gitignore  Makefile  pythia8-main.c++
