[package]
name = "delphes-parallel"
version = "0.1.0"
edition = "2024"
default-run = "DelphesHepMC2"

[dependencies]
bytesize = "2.3.1"
clap = { version = "4.6.0", features = ["derive"] }
ctrlc = { version = "3.5.2", features = ["termination"] }
hepmc2 = "0.7.0"
num_cpus = "1.17.0"
tempdir = "0.3.7"

[[bin]]
name = "DelphesHepMC2"
path = "src/bin/hepmc2/main.rs"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
